Refactors header logo styling
Updates width and margin-left properties to use the `clamp()` function for responsive design

Refactors header logo styling for responsive design using `clamp()`

Updates width and margin-left properties of the header logo to use the `clamp()` function, ensuring responsive design.

Fixes #N/A

--- a/style.css
+++ b/style.css
@@ -18,10 +18,10 @@ body {
 }
 
 #header_logo {
-  width: 10%;
-  margin-left: 3%;
-  min-width: 80px;
+  width: clamp(80px, 10%, 150px);
+  margin-left: clamp(10px, 3%, 30px);
 }
+
 
 
 
