--- a/style.css
+++ b/style.css
@@ -23,9 +23,6 @@ body {
 }
 
 
-
-
-
 .main-container {
   display: flex;
   justify-content: center;
@@ -39,6 +36,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-justify: center;
   padding: 20px 0;
   border-top: 1px solid #360b0b;
   background-color: #082129;
@@ -48,4 +46,27 @@ body {
 
 .footer_text {
   color: #789199;
+  text-justify: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+#content{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+
+.doors{
+  width: 64px;
+  height: 64px;
+  background-color: green;
+  border: 1px, solid, black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background-size: contain;
 }
