--- a/style.css
+++ b/style.css
@@ -70,3 +70,20 @@ body {
   cursor: pointer;
   background-size: contain;
 }
+
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  
+}
+
+.d_none {
+  display: none;
+
+  
+}
